--- a/plutus-book/doc/09-extended.adoc
+++ b/plutus-book/doc/09-extended.adoc
@@ -1,33 +1,26 @@
 [#09-extended]
-= Extended UTxO Model
+= Extended UTXO Model
 
 This chapter is geared towards the reader that wants to have a clearer picture
-of just where Plutus fits in on Cardano Shelley
-blockchain ledger. Here we present a high-level explanation of the extended
-UTxO model and introduce the reader into the idea of using scripts as
+of the Cardano ledger features that enable it to support the Plutus platform.
+Here we present a high-level explanation of the extended
+UTXO model and introduce the reader to the idea of using scripts as
 tools for making smart contracts on the blockchain. In this chapter,
-we use and build on concepts and notation from the <<03-UTxO#03-UTxO>> chapter.
+we build on concepts and notation from the <<03-UTXO#03-UTXO>> chapter.
 
-In the basic UTxO model, the scheme for authorizing transactions
-is reliable, but somewhat basic. It is also limited to strictly Ada accounting.
-The extended UTxO model brings a significant portion of the expressiveness of
-Ethereum’s account-based scripting model to the UTxO-based Cardano blockchain,
-including smart contract support.
-The extension has two components:
+The basic UTXO model is adequate for accounting for transactions using Ada, but little more.
+The extended UTXO model brings a significant portion of the expressiveness of
+Ethereum’s account-based scripting model to the UTXO-based Cardano ledger,
+The extension has the following components:
 
-. An extension to the data carried by
-transactions and the corresponding processing scheme performed by the nodes
-. An extension to the data stored on the chain UTxO
-. An
-extension to the wallet backend to facilitate off-chain code that coordinates
-the execution of on-chain computations.
-- Note that an extended UTxO wallet must have access to ledger data in
-order to be able to watch (or to look up) outputs at specified addresses
-at any time.
+. An extension to the data carried by transactions and the validation performed by the nodes
+. An extension to the data stored in the chain UTxO
+. An extension to the wallet backend to facilitate off-chain code that coordinates
+the execution of on-chain computations
 
-In this chapter, we focus on the first component.
-In the extended UTxO model, additional on-chain computations must be done to
-validate a transaction. Without scripts, the Shelley ledger UTxO state update
+In this chapter, we focus on the first two components.
+In the extended UTXO model, additional on-chain computations must be done to
+validate a transaction. Without scripts, the ledger UTXO state update
 rule essentially consists of two steps (both of which are, of course, computations
 performed by nodes, and are on-chain):
 
@@ -48,128 +41,171 @@ the reward address)
 * the application of every certificate (witnessed by certificate author)
 * genesis key delegations
 
-For a detailed formal description of
-this type of accounting, we refer the reader again to <<endmatter#deleg>>.
+The wallet is expected to compute the
+fees and either add them to the inputs, or
+subtract them from the outputs if possible.
+A transaction which was not validated does not incur fees.
+This still holds true in the extended model.
+NOTE: For a detailed formal description of the ledger model, we refer the reader
+again to <<endmatter#deleg>>.
 A major way to extend the functionality of the Cardano ledger is by adding
 script capability to the second step.
 
 == Scripts
 
 Recall from the <<10-PlutusTx#10-PlutusTx>> chapter that
-scripts (specifically, Plutus scripts) are Plutus Core expressions carried by
-a transaction (or stored on the ledger). They are defined inside a specially-delimited
+scripts are Plutus Core expressions carried by
+a transaction. They are defined inside a specially-delimited
 sections of a Haskell program, called Plutus Tx, which are then compiled into
 Plutus Core.
 
 Scripts are a way to add smart contract functionality
-to the extended UTxO model.
-Many of the subsequent chapters of this book discuss building scripts
-that define specific smart contracts. In this section, however,
-we discuss in general how scripts are used in the extended UTxO model.
-For a draft of the formal specification of the extended UTxO model with
+to the extended UTXO model.
+Many of the subsequent chapters of this book give specific examples of
+contracts defined using Plutus. In this section
+we discuss the underlying script model such contracts are built on.
+
+NOTE: For a draft of the formal specification of the extended UTXO model with
 scripts, see <<endmatter#scripts>>.
 
-Scripts, like witnesses, are another
-tool to make sure a transaction is performing only authorized actions.
-The purpose of witnessing for (non-script) spending of outputs is to verify
+The purpose of witnessing is to verify
 that the wallet spending the output has the private key associated with the address
-in the corresponding UTxO entry (i.e. the address from which it is spending the
+in the corresponding output in the UTXO (i.e. the address from which it is spending the
 money) by checking that it was indeed signed (witnessed)
 by that key.
+Scripts, like signatures, are another
+tool to ensure a transaction is spending only outputs it is authorized to.
 
-A script `s {two-colons} Script` has its own address
-`a {two-colons} Addr_script`, to which it
-is possible to pay. This script address is the hash of the script.
-Thus, for scripts, we want to check that a transaction (and the wallet that
-generated it) has the original script of which this address is the hash.
-The whole validator script itself is never stored on the ledger, only its hash,
-and only as the address of the unspent UTxO entries belonging to that script.
+A script to which it
+is possible to pay has its own address in the UTXO, and it is the hash of this script.
+Only spending from these _script addresses_ can be controlled by the script (whose
+address this is). Let us look at a very small example that omits some of the
+details, but gives the reader an idea of the kind of thing scripts can do.
+Suppose the owner of (non-script) address `a` has promised to pay `x` Ada
+to the first person to guess a word they are thinking of.
+This is a kind of contract, and we want to use the Plutus platform to interpret
+how it controls the transfer of funds. This process
+always starts with a contribution of funds to the contract.
 
-The role of a script is not to generate additional inputs or outputs in
-the current transaction (or make new transactions). Scripts are only used to
+Recall that in the classic model, UTXO outputs are of the form
+`(txid, ix) |-> (a,c)`. The pair `(a,c)` has type `TxOut` and is called an output,
+where `a` is the address of the owner of the funds
+(the paying or staking public key, usually), and `c` is the value of Ada in the output.
+
+Roughly, we expect the owner of `a` to pay to the contract `c` Ada, which can
+only be spent if the correct word guess is provided by the participant.
+We also notice here that the secret word should not be stored in plain text on
+the blockchain, so we must only ever expose the hash of this word.
+We denote the secret word hash `hs`.
+So, the contract we want should take a plain text
+word guess provided by a participant, and allow them to spend the Ada `c`
+locked at the contract address if the guess is correct.
+To express this, we write in `PlutusTx` the following contract,
+representing the condition under which the transfer of funds can take place:
+
+----
+s = "given a word guess wg,
+check that wg hashes to hs"
+----
+
+The owner of `a` pays to this script (i.e. to the
+address `hash s`) `c` Ada. So, they produce a transaction that contains some inputs spending
+ledger UTXO outputs with `a` in the address field, and an output
+
+----
+ix |-> (hash s, c)
+----
+
+Once this transaction is processed, we will have the following output in the UTXO:
+
+----
+(txid, ix) |-> (hash s, c, hs)
+----
+
+In the classic model, the inputs of a transaction are simply references to
+the ledger UTXO's which the transaction is spending, so they are
+of the form `(txid, ix)` - just like the keys of the UTXO finite map. In the
+extended model, we have a bit more data in the inputs for Plutus functionality.
+The output with the key `(txid, ix)` can then be spent by a wallet that can provide the
+word `wg` that hashes to `hs`. So, it can
+be spent by a transaction containing an input which spends the output
+corresponding to `(txid, ix)` and also carries the correct guess `wg`, so the
+input data is,
+
+----
+(txid, ix, wg)
+----
+
+At a node processing this transaction the computation applying
+the check in the script `s` to the hashed word script `hs` and the plain
+text word guess `wg` is performed that compares the hashes. The transaction
+is not validated if they are different, because the guess is wrong and
+the participant trying to collect the `c` Ada from this script is not allowed
+to do so.
+
+In this example, we see how an output can belong to a script (i.e. be locked by
+a script), and define a _program_ which is run to determine if someone
+is allowed to spend certain funds under its control. This is all we mean
+when we say "control the transfer of funds".
+
+Note that role of a script is not to generate additional inputs or outputs in
+the current UTXO or transaction (or make new transactions). Scripts are only used to
 verify that if a given transaction is consuming an unspent
 output, it is allowed to do so. This script locking approach is only
-relevant to those outputs in the UTxO which are associated with a script
+relevant to those outputs in the UTXO which are associated with a script
 address, meaning that these outputs
 belong to a script.
 
-For example, recall the crowdfunding campaign scheme. If it is time for
-the owner of the campaign to collect the contributions, his wallet
-should produce a transaction with inputs which correspond to the contributions of the
-funders (i.e. the entries in the ledger UTxO which have the script address of that
-crowdfunding contract in the `Addr` field). The outputs of
-this transaction must be totaling the same amount as the contributors'
-inputs plus the transaction fee, presumably with the owner's own address in the
-`Addr` field of each.
-The purpose of the scripts carried by such a transaction would be to prove that
-this consumption of UTxO entries is authorized, e.g. the campaign goal has
-been reached and in this current interval of time, the owner is allowed to
-collect the contributions.
-
-The wallet is expected to compute the fees and either add them to the inputs, or
-subtract them to the outputs if possible. The exact behaviour should be
-configurable by the user. Note that changing the inputs and outputs affects the
-transaction fees. Note also, however, that the fee can always be pre-computed
+Note that even with the addition of scripts into transaction data,
+the fee can always be pre-computed
 and paid in full, since a script-carrying transaction comes with all
 the inputs, outputs, and other data that is needed to validate it. Thus,
 there is never a problem of a transaction fee being insufficient.
 
-Here we must note that several pieces of data
-go into authorizing the spending of an output with
-this script, including
-the validator script, redeemer script, data script, and the datatype of the
-contract, etc. These are very important features of Plutus and are the
+As we just saw in the mini example above, several pieces of data
+go into authorizing the spending of an output locked by
+a script. This includes
+the validator script, redeemer script, data script, and some of the transaction
+data. These are very important features of Plutus and are the
 tools that make it possible to perform contract state-dependent validation.
-We will discuss the role of each of these in following section, as well as
-explain the use of each in every example we present later on.
 
 == Validator, Redeemer, and Data Scripts
 
 A a term of type `Script` is a Plutus Core expression.
 Validator scripts are Plutus Core functions that take several input
-arguments (which are also scripts). In order to apply one script to
-another, the Plutus Core application is wrapped in the map
-
-`applyScript :: Script -> Script -> Script`
-
-In the validation process, additionally, type checking the arguments is also done
-before the application. Let us now look at the function of validator
-scripts and their arguments on the blockchain.
+arguments (which are also scripts).
+This application is first typechecked during validation.
+Let us now look at the function of the validator
+and its arguments.
 
 . Validator script
-* Carried by a transaction spending funds from a script address
-* Not stored in full in the ledger UTxO
+* Carried by a transaction input spending funds from a script address
+* Defines the _logic_ or _rules_ of a contract
+* Not stored in full in the ledger UTXO
 - only the hash is stored as the address of
 the output to which the carrying transaction pays
 * Is a function taking the following 3 types of scripts as parameters
 - data script
 - redeemer script
-- transaction and ledger data
+- transaction data
 * returns a boolean, `False` if validation fails, `True` otherwise
 
 . Data script
 * Carried by a transaction which is paying to a script
-* Contains state information about a given smart contract, e.g.
-- the public key of the contributor of a crowdfunding campaign, or
-- the hash of the word participants must guess to win money locked by the contract
-* Stored in full in the UTxO
+* Contains state information of a given contract
+* Stored in full in the UTXO
 - each output belonging to a (validator) script address must have an associated data script
-* Hash computed as part of transaction validation
 
 [start=3]
 . Redeemer script
-* Carried by a transaction which is spending funds from a script address
+* Carried by a transaction input which is spending funds from a script address
 * A piece of information the wallet must provide in order for a
 transaction to spend from a
-script address, and can be thought of as an action, such as a
-- guessing a secret word (the guess can be verified using the _data_ script)
-- an input command which is interpreted by the validator
-as spending money from a script (this changes the data script of the contract)
+script address,
+* Can represent an action the participant is taking
 * Value is never stored on-chain, and only appears as part of transaction data
-* Hash computed if and when it is necessary for script validation, not stored on-chain
 
-Another argument that the validator data script takes which is put
-together out of transaction and ledger data,
+Another argument that the validator script takes is information about the transaction,
 
 [start=4]
 . A `PendingTx` value.
@@ -177,140 +213,160 @@ together out of transaction and ledger data,
 - inputs and outputs
 - validity interval, etc.
 
-The following function is used to perform the validation (i.e. apply the
-validator to the relevant inputs) using the
-scripts described above:
+Let us now consider how our example above conforms to this validator-data-redeemer
+script model. The parts of the contract we saw above, `s`, `hs`, and `wg`, are
+defined in `PlutusTx`, and are compiled into `Plutus Core` scripts.
+Note that `hs` was included directly in the validator script. We would not
+usually want to do this, as it forces us to make a new contract every time
+there is a new secret word to guess. This secret word hash piece of data
+looks more like _state_.
+
+Recall that state information is usually stored in
+the _data script_. If we want to, say, have several secret words
+a participant can guess which belong to the same contract,
+we can modify our example slightly, with
+the validator:
 
 ----
-runScript
-    :: (MonadError ScriptError m)
-    => Checking
-    -> ValidationData
-    -- ^ contains the PendingTx data
-    -> DataScripts
-    -- ^ a list of data scripts that may be used in the validation computation
-    -- ^ more on these in the note below
-    -> ValidatorScript
-    -- ^ the validator
-    -> DataScript
-    -- ^ the specific data script locking the input for which the validation is being performed
-    -> RedeemerScript
-    -- ^ the redeemer
-    -> m [String]
+s = "given a hash of a secret word hs, and a word guess wg,
+check that wg hashes to hs"
 ----
 
-We will explain the purpose of the argument of type `DataScripts` in the note below.
-These are data scripts that are associated with script addresses the carrying
-transaction is paying _to_.
-Now, let us look more closely at how these scripts fit into the extended model
-transaction and UTxO structure.
-
-Recall that in the classic model, UTxO entries are of the form
-`(txid, ix) |-> (a,c)`. The pair `(a,c)` has type `TxOut` and is called an output,
-where `a` is the address of the owner of the funds
-(the paying or staking public key, usually), and `c` is the value of Ada in the output.
-
-For the extended model, we say that an output is locked by (or belongs to)
-a script if `a` is a script address (hash of the validator script). In this
-case, we must store additional data on the
-ledger in the `TxOut` - the data script. It must be stored in full, not just the
-hash, since it will be passed as an argument to the validator during
-validation of a transaction which is trying to spend this output.
-The extended `TxOut` for a script address contains
-
-- an address `a`, which is the hash of the validator
-- the value `c` of funds at this address
-- the type of the output, and the data script, expressed as `PayToScript datascript`:
-
-A `TxOut` which belongs to a public key address contains only the address and the value.
-Thus, a term of the `TxOut` data structure type includes a term of the type:
+We add the data script to the output in the transaction paying to this
+script,
 
 ----
-data TxOutType =
-    PayToScript !DataScript -- A pay-to-script output with the given data script.
-    | PayToPubKey !PubKey -- A pay-to-pubkey output.
+ix |-> (hash s, c, hs)
 ----
 
-This is how the outputs are structured both inside the carrying transaction
-and the UTxO. In the extended model, the position of an output in the outputs list
-carried by a transaction is its reference index `ix`.
-In the UTxO, the outputs are stored as a finite
-map with the keys of the form `(txid, ix)`. Once a transaction is validated,
-the update mechanism
-of the UTxO is the same for both the the extended and classic model (with the
-extended model storing the additional `TxOutType` data described above).
-For a reminder, see the <<03-UTXO#03-UTXO>> chapter.
-
-In the classic model, the inputs of a transaction are simply references to
-the UTxO entries which the transaction is spending, so they are
-of the form `(txid, ix)` - just like the keys of the UTxO finite map.
-In the extended model, we call this pair
-`TxOutRef` in the code, and it makes up only a part of the `TxIn`.
-Additionally, for an `TxOutRef` which references a script address (i.e. is
-spending from a script), the full validator and redeemer script must be included
-in the `TxIn` data. So, in the `TxIn` data type, we add a term of the following
-type:
+Which will give the following output in the UTXO once the transaction is
+processed:
 
 ----
-data TxInType =
-      ConsumeScriptAddress !ValidatorScript !RedeemerScript
-    -- ^ A transaction input that consumes a script address with the given validator and redeemer pair.
-    | ConsumePublicKeyAddress !PubKey
-    -- ^ A transaction input that consumes a public key address.
+(txid, ix) |-> (hash s, c, hs)
 ----
 
-To recap the paying and spending process in a different way,
+In this example, we see that
+
+* The _validator_ script is `s`
+* The _data_ script is `hs`
+* The _redeemer_ script is `wg`
+
+The `PendingTx` value is not used in this example, but
+we could have extended the contract logic to only allow a transaction to
+spend the funds under the additional condition that it does so before a certain
+slot `s`. The range of slots in which a transaction is valid is
+part of the `PendingTx` data structure. During script validation, want to check
+that regardless of when the transaction gets processed, this additional condition
+holds true. To do this,
+we would intersect its validity range with the range "any time before `s`".
+
+The address of the funds locked by the contract is always the _validator script
+hash_. In this case, we could have included the hashed secret word directly
+in the validator. Making it part of the data script (state) of the contract
+makes the same validator usable for multiple word games (this is not the case
+for most other more complex contracts). The use of the
+redeemer, however, is inevitable here. It has to come from a participant,
+and represents the act of guessing the secret word.
+
+== UTXO and Transaction Data Extension
+
+We again use the same example to illustrate the extension to the ledger UTXO and
+transaction data. When a transaction is paying from a script, the _output_
+which will belong to the script must contain the data:
+
+* `hash s`, the hash of the validator script, which is also script the address
+* `c`, the coin value locked by the script
+* `hs`, the hash of the secret word (the data script)
+
+In a transaction, an _input_ that is spending a script output
+must include,
+
+* `(txid, ix)`, the reference to the output it is spending
+* `wg`, the word guess the participant is making (the redeemer)
+
+Now, the a script-locked ledger UTXO output will have
+
+* `(txid, ix)`, the reference key on the output
+* `c`, the coin value locked by the script
+* `hs`, the hash of the secret word (the data script)
+
+This is consistent with the classic UTXO model structure, the only additions are
+the three types of scripts.
+
+== Paying to and Spending from a Script
+
+We just saw the the extension to the UTXO and transaction data necessary
+to accommodate Plutus, and the different types of scripts used.
+Now we would like to recap the process of paying and spending to and from
+a script to solidify the reader's understand of the process:
 
 . Paying to a script address
 * Transaction contains an output `o` where the address in it is the hash of the
 validator script
 - this hash is computed off-chain by the wallet
 * `o` also contains the corresponding data script
-* `o` becomes a value in the UTxO map once the carrying transaction is processed
-* No validation occurs
-- Neither the full validator nor the redeemer are part of this payment process
+* `o` becomes a value in the ledger UTXO once the carrying transaction is processed
+* No validation occurs for paying to a script
+- The redeemer is not part of this payment process
+
+In the secret word example, the transaction paying to the game script to start
+the game carries the output
+
+----
+ix |-> (hash s, c, hs)
+----
+
+which then becomes an output in the UTXO, `(txid, ix) |-> (hash s, c, hs)`.
 
 . Spending from a script address
 * Transaction contains an input `i` which
-- references the output in the UTxO it is spending
-- contains the full validator and redeemer scripts
-* The UTxO entry which `i` references is a script address, and thus has a
+- references the output in the UTXO it is spending
+- carries the full validator and redeemer scripts
+* The UTXO output which `i` references is a script address, and thus has a
 data script stored in the output
-- the validator script `i` provides must hash to this script address
+- the validator script `i` provides hashes to this script address
 * Validation is done at this point for the spending of the specific output
 `i` references
 - we have the validator, redeemer and data script all available
-- if it succeeds, the transaction is allowed to spend the UTxO output `i` references
+- if it succeeds, the transaction is allowed to spend the UTXO output `i` references
 - validation is performed on-chain
 
-If the `runScript` computation returns true for a specific output being spent,
-the validation process proceeds.
+In the example, a transaction spending the secret word game UTXO output
+must contain the input `(txid, ix, wg)`. It is allowed to spend it when
+
+----
+s hs wg
+----
+
+is true, and the transaction validation may proceed.
 Otherwise, the entire transaction is scrapped. Essentially, given the context
 of the ledger state and carrying transaction data,
 the validator is used to show that the provided action (redeemer), is allowed
 to be performed given the current contract state (data script).
-In other words, the smart
+In other words, the
 contract functionality defined by the code in the validator allows the spending
 of script-owned output funds by the carrying transaction.
 Note that,
-in the spirit of UTxO style accounting, the contract state is never updated in
-the UTxO entry. One can only spend that entry, and create a new one with a
+in the spirit of UTXO style accounting, the contract state is never updated in
+the UTXO. One can only spend that output, and create a new one with a
 different data script.
 
-We now go on to explain the sealing mechanism mentioned above
-as it is currently implemented on the Plutus mockchain. Its
-purpose is to add additional functionality to the script model, but
+There is one more piece to the validator-redeemer-data script puzzle that
+we have not discussed yet: the sealing mechanism. Its
+purpose is to add functionality to the script model, but
 implementation places different requirements on the type of the redeemer script as
 a consequence. We will see how to build redeemer scripts that conform to
-these in the upcoming chapters discussing concrete examples.
+these in the upcoming chapters discussing concrete examples such as
+state machines, see Chapter <<auction#auction>>.
 
 .The Seal Mechanism
 [NOTE]
 ====
 
-Having access to the data scripts of a script address a transaction
-is paying _to_ for the purposes of validation significantly expands the expressivity
-of the validator-redeemer-data script model for locking outputs.
+One way to make the validator-redeemer-data script model for locking outputs
+more expressive is to pass the validator the data scripts of a script address to which
+a transaction is paying.
 This additional functionality is useful when two or more contracts
 interact, where both contracts have some resources that they need to control
 across a chain of transactions.
@@ -318,17 +374,18 @@ across a chain of transactions.
 In such cases, the types of the data scripts
 associated with a script address to which a transaction is paying
 are arbitrary and not necessarily known ahead of time. This does not impact
-typing transaction data itself, as they will all still have type `DataScript`,
+the `PendingTx` representation of the transaction, as it stores all the data
+scripts opaquely as `DataScript`s,
 but without knowing the underlying Plutus Core types of these terms,
 adding such functionality creates a typing
 challenge for performing Plutus Core computations in the validation process.
 
-Suppose there is a UTxO entry on the ledger with the validator script hash
+Suppose there is a output on the ledger with the validator script hash
 address `v1`, and the associated data script `ds1`. If a transaction `t` is
 trying to spend this entry and move the funds to an address `v2` of a
 different validator script, but produce multiple outputs for this,
 locked with different data scripts. For example, it wants to create two outputs
-in the UTxO with data scripts `v2_ds1` and `v2_ds2` (at the address `v2`).
+in the UTXO with data scripts `v2_ds1` and `v2_ds2` (at the address `v2`).
 
 Now, in order to spend the funds at script address `v1`, our transaction `t` must
 provide the validator that hashes to `v1`, along with the redeemer. Suppose
@@ -375,8 +432,6 @@ Sealed (HashedDataScript t1) -> Sealed (HashedDataScript t2) -> r
 ----
 
 Here, `t1` and `t2` correspond to the underlying types of `v2_ds1` and `v2_ds2`.
-So, this `Sealer` type wrapper is actually never unwrapped, but instead compiled
-directly into a term of the underlying type of the Plutus Core expression.
 The redeemer is defined to have the type above by the same wallet that also
 defined `v2_ds1` and `v2_ds2`, so it is aware of `t1` and `t2`. The redeemer
 is also defined to be in charge of performing
@@ -409,15 +464,16 @@ data of `t`. So, the validator
 can check (by comparing hashes) that it is being passed the sealed values that do indeed correspond
 to the data scripts in the outputs of `t`, and the redeemer did not swap them.
 
+The data script is a piece of ledger data that will frequently need to be examined in order
+for a contract participant to make informed decisions on what action to take
+next. For example, they will need to know the highest auction bid currently
+made in order to make their own bid. Thus, data script data needs to be easily
+inspectable, which is a major consideration going into the design of a
+validator-redeemer-data script model where it is possible to write a validator
+that depends on the data scripts of the contract outputs to which a transaction
+is transferring funds.
+
 ====
-
-
-Note that with this model, as with the classic UTxO
-model, a transaction which was not validated does not incur fees. Unlike
-the classic model, however, the extended model allows for spending from script
-addresses that do not belong to the wallet that generated the transaction.
-This is because instead of a private key, a validator script must be
-provided to spend from such an address, and scripts are publicly available.
 
 The reader will also note later on, as we discuss writing a complete Plutus contract,
 the off-chain function that returns a PlutusTx validator script takes a parameter.
@@ -450,7 +506,7 @@ the mock wallet). The main goal of the off-chain code is to generate
 the correct script at the correct time and to build a transaction carrying it.
 
 Recall that Plutus Playground is a platform where one can write on- and off-chain code
-to simulate smart contract functionality on
+to define and use smart contracts on
 the mockchain. All the code written in the Playground
 is shared by the mock wallets during the simulation, and can be used by
 any of them.
@@ -458,7 +514,7 @@ In the real Cardano blockchain environment, on- and off-chain
 contract code is meant to be used by all wallets participating in the contract,
 distributed over the network. This means there needs to be another reliable way
 to share Plutus code. The on-chain code is hashed, and the hash is stored in the
-UTxO, giving the participants a way to verify that it is indeed the right code
+UTXO, giving the participants a way to verify that it is indeed the right code
 for the right contract. The off-chain code is simply a way to generate
 scripts and transactions, which then get validated and authenticated as
 part of transaction processing. Thus, it is not necessary to use the blockchain to
@@ -466,29 +522,29 @@ provide additional guarantees of its authenticity - simply sharing such code
 via a reliable code repository like GitHub will suffice.
 
 However, similar to the case of legal know-how being necessary to write and
-understand legal contracts, it is up to the creators and users of a smart contract
-to have sufficient understanding of Plutus code to trust the contract is doing
+understand legal contracts, it is up to the creators and users of Plutus contracts
+to have sufficient understanding of the code to trust the contract is doing
 what they expect it to do. Cryptographic security is powerless in this case -
 this is where this book comes in!
 
-=== Rollbacks and Other Extended UTxO Model Considerations
+=== Rollbacks and Other Extended UTXO Model Considerations
 
 Given that blockchain events, such as the confirmation of a transaction, can
 trigger the execution of off-chain coordination code, we need to carefully
 consider the implications of needing to rollback any action that depends on a
 rolled back transaction. We do not give the details of this functionality here.
 
-There are other features of the extended UTxO system that are less relevant to
+There are other features of the extended UTXO system that are less relevant to
 a Plutus user, which we will also not explain in detail in this chapter.
 
 === Adding Ledger Functionality Using Scripts
 
 In the upcoming examples in this book we walk the reader through the process
 of building, testing and using Plutus contracts. For examples of work on using
-scripts to add specific functionality to the UTxO ledger, we would like to
+scripts to add specific functionality to the UTXO ledger, we would like to
 point the reader to the following documents,
 
-* Multi-currency on the UTxO Ledger, see <<endmatter#multicur>>
+* Multi-currency on the UTXO Ledger, see <<endmatter#multicur>>
 - An implementation of a script-based model for different types of
 currency as well as non-fungible tokens on the mockchain
 * A Formal Specification of a Multi-Signature Scheme Using Scripts, see <<endmatter#multisig>>
